--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles/blog.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever github</title>
 </head>
 <body>
-    
+  <div>
+    <h3>My first website</h3>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias facilis, mollitia aperiam eveniet quidem debitis, illum minima at, ipsam molestiae aliquid repellendus eos deleniti sint consequuntur quibusdam possimus veritatis blanditiis!</p>
+
+  </div>  
 </body>
 </html>
