aadded alist to push code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias facilis, mollitia aperiam eveniet quidem debitis, illum minima at, ipsam molestiae aliquid repellendus eos deleniti sint consequuntur quibusdam possimus veritatis blanditiis!</p>
 
   </div> 
-  <h3>my secent wabsite</h3> 
+  <h3>my secont wabsite</h3> 
   <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus sunt, ad provident maxime totam ipsa a accusantium voluptatum eveniet quibusdam eius nulla omnis libero facere pariatur magnam! Alias, quaerat possimus.</p>
   <div>
     <h3>my third wabsite</h3>
