added a list to push code

--- a/index.html
+++ b/index.html
@@ -18,5 +18,13 @@
     <h3>my third wabsite</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam quidem numquam aspernatur explicabo, voluptatem dicta? Enim dolorum consectetur velit ab odio obcaecati quisquam mollitia necessitatibus totam, tenetur esse architecto ratione.</p>
   </div>
+  <div>
+    <h3>how to push incremental code</h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m" add a meaningful commit message"</li>
+        <li>git pusg</li>
+    </ul>
+  </div>
 </body>
 </html>
